<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/light_grey"
        android:gravity="bottom|end"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result">

        <Button
            android:id="@+id/button15"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/light_grey"
            android:padding="16dp"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button16"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/light_grey"
            android:padding="16dp"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button17"
            app:layout_constraintStart_toEndOf="@+id/button15"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button17"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/light_grey"
            android:padding="16dp"
            android:text="@string/_9"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button18"
            app:layout_constraintStart_toEndOf="@+id/button16"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button18"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/light_grey"
            android:padding="16dp"
            android:text="@string/_divider"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button17"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


        <Button
            android:id="@+id/button23"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/light_grey"
            android:padding="16dp"
            android:text="@string/_x"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button19"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button21"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/light_grey"
            android:padding="16dp"
            android:text="@string/_4"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button20"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/light_grey"
            android:padding="16dp"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button19"
            app:layout_constraintStart_toEndOf="@+id/button21"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button19"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/light_grey"
            android:padding="16dp"
            android:text="@string/_6"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button23"
            app:layout_constraintStart_toEndOf="@+id/button20"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <Button
            android:id="@+id/button28"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/light_grey"
            android:padding="16dp"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button27"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button27"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/light_grey"
            android:padding="16dp"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button25"
            app:layout_constraintStart_toEndOf="@+id/button28"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button25"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/light_grey"
            android:padding="16dp"
            android:text="@string/_3"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button24"
            app:layout_constraintStart_toEndOf="@+id/button27"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button24"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/light_grey"
            android:padding="16dp"
            android:text="@string/_sub"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button25"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <Button
            android:id="@+id/button32"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/light_grey"
            android:padding="16dp"
            android:text="@string/_zero"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button29"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button31"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/light_grey"
            android:padding="16dp"
            android:text="@string/_plus"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button29"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button29"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/light_grey"
            android:padding="16dp"
            android:text="@string/clr"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button31"
            app:layout_constraintStart_toEndOf="@+id/button32"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

        <Button
            android:id="@+id/button33"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:backgroundTint="@color/light_grey"
            android:padding="16dp"
            android:text="@string/_equal"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>